add comments and getobject method in objectstore class